[tool.poetry]
name = "saltie-bot"
version = "0.1.0"
description = "The saltiest Rocket League Discord bot around!"
authors = ["Matthew Mage <sciguymjm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
"discord.py" = "^0.16.12"
requests = "^2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
